# mahiro

./: .eslintrc.cjs  .gitignore  Pipfile  README.md  config.html  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  server.py  settings.json  settings.py  tsconfig.json  vite.config.ts
client/: .gitignore  index.html  package-lock.json  package.json  tauri.html  vite.config.ts  vite.tauri.config.ts
client/public/: index.html  manifest.json  serviceWorker.js
client/src/: App.css  App.tsx  AppContext.tsx  Board.tsx  Config.tsx  ConfigApp.tsx  Connection.tsx  Control.tsx  Settings.tsx  control.tsx  controller.tsx  enum.ts  functions.ts  index.css  index.tsx  interface.ts  webSocket.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/webview/: config.html  index.html
docs/: ja_README.md  ja_compile.md
modules/: control.py  session.py  settings.py  token.py  websocket.py
public/: index.html  manifest.json  serviceWorker.js
sample/: controls.json  sheets.json
sample/tauri/: controls.json
server/: Pipfile  main.py
src/: App.css  App.tsx  AppContext.tsx  AppContextProvider.tsx  Board.tsx  ConfigApp.tsx  Connection.tsx  Control.tsx  Page.tsx  ThemeContextProvider.tsx  WebSocketContext.ts  WebSocketProvider.tsx  enum.ts  interface.ts  path.ts  webSocket.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  control.rs  main.rs  server.rs  sheet.rs  ws.rs
src-tauri/src/control/: browser.rs  command.rs  hotkey.rs
src/components/: Button.tsx  Slider.tsx
src/config/: Application.tsx  controls.ts  fetchControls.ts  fetchSheets.ts  saveControls.ts  saveSheets.ts  sheets.ts  (+1 more)
(+35 files in other folders)
